# tinkoff-rs

./: Cargo.toml  build.rs
src/: lib.rs  tcs.rs
src/point/: point.manager.rs
src/services.api/: individual.service.rs
src/stream/: bi.stream.manager.rs  bi.stream.request.rs  service.stream.manager.rs  service.stream.request.rs
