[package]
name = "tinkoff-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
tonic = { version = "0.12.3", features = ["tls", "tls-native-roots"] }
prost = "0.13.4"
prost-types = "0.13.4"
tokio = { version = "1.43.0", features = ["full"] }
tokio-stream = { version = "0.1.17" }
futures = "0.3.31"
log = "0.4.25"
env_logger = "0.11.6"
uuid = { version = "1.13.1", features = ["v4"] }
flume = "0.11.1"
ndarray = "0.16.1"
nalgebra = "0.33.2"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
serde_urlencoded = "0.7"
bytes = "1"
reqwest = { version = "0.12.12", features = ["json"] }
axum = "0.8.1"
async-channel = "2.3.1"
derive_more = { version = "2.0.1", features = ["from", "into"] }

[build-dependencies]
tonic-build = "0.12.3"
